option go_package = "gitlab.ozon.ru/example/api/example;example";
